--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -79,9 +79,9 @@
             </widget>
            </item>
            <item row="0" column="0">
-            <widget class="QCheckBox" name="cb_defectueux_poids">
+            <widget class="QCheckBox" name="cb_defectueux_masse">
              <property name="text">
-              <string>Poids</string>
+              <string>Masse</string>
              </property>
             </widget>
            </item>
@@ -139,7 +139,7 @@
             </widget>
            </item>
            <item row="4" column="3">
-            <widget class="QPushButton" name="pb_poids_plus_01">
+            <widget class="QPushButton" name="pb_masse_plus_01">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -163,7 +163,7 @@
             </widget>
            </item>
            <item row="4" column="4">
-            <widget class="QPushButton" name="pb_poids_moins_01">
+            <widget class="QPushButton" name="pb_masse_moins_01">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -187,7 +187,7 @@
             </widget>
            </item>
            <item row="4" column="2">
-            <widget class="QPushButton" name="pb_poids_plus_1">
+            <widget class="QPushButton" name="pb_masse_plus_1">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -283,7 +283,7 @@
             </widget>
            </item>
            <item row="4" column="0">
-            <widget class="QDoubleSpinBox" name="sb_poids">
+            <widget class="QDoubleSpinBox" name="sb_masse">
              <property name="enabled">
               <bool>true</bool>
              </property>
@@ -376,7 +376,7 @@
             </widget>
            </item>
            <item row="4" column="6">
-            <widget class="QPushButton" name="pb_poids_moins_10">
+            <widget class="QPushButton" name="pb_masse_moins_10">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -493,19 +493,19 @@
             </widget>
            </item>
            <item row="3" column="1" colspan="2">
-            <widget class="QLabel" name="lb_poids">
+            <widget class="QLabel" name="lb_masse">
              <property name="font">
               <font>
                <pointsize>12</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>Poids</string>
+              <string>Masse</string>
              </property>
             </widget>
            </item>
            <item row="4" column="5">
-            <widget class="QPushButton" name="pb_poids_moins_1">
+            <widget class="QPushButton" name="pb_masse_moins_1">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -529,7 +529,7 @@
             </widget>
            </item>
            <item row="4" column="1">
-            <widget class="QPushButton" name="pb_poids_plus_10">
+            <widget class="QPushButton" name="pb_masse_plus_10">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
