Mise en place de niveau de verbosité

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,7 +36,7 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="tabBarAutoHide">
        <bool>false</bool>
@@ -1322,6 +1322,31 @@
         <string>Journaux</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_6">
+        <item row="1" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QRadioButton" name="rb_v">
+            <property name="text">
+             <string>Verbosité faible</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="rb_vv">
+            <property name="text">
+             <string>Verbosité moyenne</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="rb_vvv">
+            <property name="text">
+             <string>Verbosité élevée</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
         <item row="0" column="0">
          <widget class="QListWidget" name="list_journaux"/>
         </item>
